--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "react-app/jest"
   },
   "browserslist": {
     "production": [
